--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,8 +7,6 @@ on:
       - main
     paths-ignore:
       - '**.md'
-      - '**/CD.yml'
-      - '**/nightly.yml'
 
 env:
   UPLOAD_BUILD: true
@@ -85,4 +83,42 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: qio_${{ matrix.os }}
+          path: .pio/build
+
+  PIO:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+          fetch-depth: 1
+
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+
+      - name: Install PIO
+        run: |
+          python -m pip install --upgrade pip
+          pip install platformio
+          pio platform install https://github.com/OS-Q/P11/releases/latest/download/package.zip
+
+      - name: Build examples
+        id: build
+        if: success()
+        run: |
+          pio run -d . >> log.txt
+          echo "::set-output name=status::success"
+
+      - name: Upload
+        if: env.UPLOAD_BUILD
+        uses: actions/upload-artifact@v2
+        with:
+          name: pio_${{ matrix.os }}
           path: .pio/build
