--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,50 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
+[platformio]
+#env_default = enc
+
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 115200
-lib_deps = DMXSerial
-lib_ignore = DMXSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen
+lib_deps = DMXSerial, Ethernet
+lib_ignore = DMXSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, UIPEthernet
+build_flags =
+  -D USE_DMXSimple=1
+  -D USE_DMXSerial=0
+  -D USE_ESPDMX=0
+  -D USE_EEPROM_MAC=0
+  -D USE_W5100=1
+  -D USE_ESPWIFI=0
+  -D USE_WIFIMANAER=0
+  -D USE_OTAUPDATE=0
+  -D DEBUG_SERIAL0=1
+  -D DEBUG_UDP=0
+  -D DEBUG_SYSLOG=0
+  -D USE_SIMULATOR=0
+  -D DMX_SIZE=128
+  -D DEBUG_PORT=514
+  -D ST_IP_3=123
+  -D ST_IP_4=176
+  -D DEBUG_IP=137
+  -D DIMMER_START_LEVEL=2
+
+[env:qio]
+platform = P11
+board = uno
+framework = arduino
+monitor_speed = 115200
+lib_deps = DMXSerial, Ethernet
+lib_ignore = DMXSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, UIPEthernet
 build_flags =
   -D USE_DMXSimple=1
   -D USE_DMXSerial=0
@@ -30,8 +70,8 @@ platform = atmelavr
 board = leonardo
 framework = arduino
 monitor_speed = 115200
-lib_deps = DMXSerial
-lib_ignore = DmxSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen
+lib_deps = DMXSerial, Ethernet
+lib_ignore = DmxSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, UIPEthernet
 build_flags =
   -D USE_DMXSimple=0
   -D USE_DMXSerial=1
@@ -59,7 +99,7 @@ board = uno
 framework = arduino
 monitor_speed = 115200
 lib_deps = DMXSerial
-lib_ignore = DMXSerial, ESPDMX, WifiManager, Ethernet, WiFi
+lib_ignore = DMXSerial, ESPDMX, WifiManager, Ethernet, WiFi, UIPEthernet
 build_flags =
   -D USE_DMXSimple=1
   -D USE_DMXSerial=0
@@ -90,7 +130,7 @@ framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 lib_deps = ESPDMX, WifiManager
-lib_ignore = DMXSerial, DmxSimple, Ethernet-PaulStoffregen
+lib_ignore = DMXSerial, DmxSimple, Ethernet-PaulStoffregen, UIPEthernet
 build_flags =
   -D USE_DMXSimple=0
   -D USE_DMXSerial=0
@@ -120,7 +160,7 @@ framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 lib_deps = ESPDMX, WifiManager
-lib_ignore = DMXSerial, DmxSimple, Ethernet-PaulStoffregen
+lib_ignore = DMXSerial, DmxSimple, Ethernet-PaulStoffregen, UIPEthernet
 build_flags =
   -D USE_DMXSimple=0
   -D USE_DMXSerial=0
@@ -148,7 +188,7 @@ platform =  windows_x86
 upload_speed = 921600
 monitor_speed = 115200
 lib_deps =
-lib_ignore = DMXSerial, DmxSimple, ESPDMX, WifiManager, Ethernet-PaulStoffregen
+lib_ignore = DMXSerial, DmxSimple, ESPDMX, WifiManager, Ethernet-PaulStoffregen, UIPEthernet
 src_build_flags = -std=gnu++11
 build_flags =  -lws2_32 -lwsock32
   -D USE_DMXSimple=0
@@ -173,3 +213,33 @@ build_flags =  -lws2_32 -lwsock32
   -D ST_IP_4=176
   -D DEBUG_IP=137
   -D DIMMER_START_LEVEL=1
+
+[env:enc]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+monitor_speed = 115200
+lib_deps = DMXSerial, UIPEthernet
+lib_ignore = DMXSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, Ethernet
+build_flags =
+  -D USE_DMXSimple=1
+  -D USE_DMXSerial=0
+  -D USE_ESPDMX=0
+  -D USE_EEPROM_MAC=0
+  -D USE_W5100=0
+  -D USE_ENC28j60=1
+  -D USE_ESPWIFI=0
+  -D USE_WIFIMANAER=0
+  -D USE_OTAUPDATE=0
+  -D DEBUG_SERIAL0=0
+  -D DEBUG_UDP=1
+  -D DEBUG_SYSLOG=0
+  -D USE_SIMULATOR=0
+  -D DMX_SIZE=128
+  -D DEBUG_PORT=514
+  -D ST_IP_3=123
+  -D ST_IP_4=176
+  -D DEBUG_IP=137
+  -D DIMMER_START_LEVEL=2
+  -D QUEUESIZE=64
+
