--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [platformio]
 #env_default = enc
 
@@ -19,7 +9,7 @@ monitor_speed = 115200
 lib_deps = DMXSerial, Ethernet
 lib_ignore = DMXSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, UIPEthernet
 build_flags =
-  -D USE_DMXSimple=1
+  -D USE_DMXSimple=0
   -D USE_DMXSerial=0
   -D USE_ESPDMX=0
   -D USE_EEPROM_MAC=0
@@ -46,7 +36,7 @@ monitor_speed = 115200
 lib_deps = DMXSerial, Ethernet
 lib_ignore = DMXSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, UIPEthernet
 build_flags =
-  -D USE_DMXSimple=1
+  -D USE_DMXSimple=0
   -D USE_DMXSerial=0
   -D USE_ESPDMX=0
   -D USE_EEPROM_MAC=0
@@ -92,21 +82,19 @@ build_flags =
   -D DEBUG_IP=137
   -D DIMMER_START_LEVEL=2
 
-
-[env:cod_m]
-platform = atmelavr
-board = uno
+[env:leonardo]
+platform = P11
+board = leonardo
 framework = arduino
 monitor_speed = 115200
-lib_deps = DMXSerial
-lib_ignore = DMXSerial, ESPDMX, WifiManager, Ethernet, WiFi, UIPEthernet
+lib_deps = DMXSerial, Ethernet
+lib_ignore = DmxSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, UIPEthernet
 build_flags =
-  -D USE_DMXSimple=1
-  -D USE_DMXSerial=0
+  -D USE_DMXSimple=0
+  -D USE_DMXSerial=1
   -D USE_ESPDMX=0
-  -D USE_EEPROM_MAC=1
+  -D USE_EEPROM_MAC=0
   -D USE_W5100=1
-  -D USE_DHCP=1
   -D USE_ESPWIFI=0
   -D USE_WIFIMANAER=0
   -D USE_OTAUPDATE=0
@@ -114,14 +102,14 @@ build_flags =
   -D DEBUG_UDP=0
   -D DEBUG_SYSLOG=0
   -D USE_SIMULATOR=0
-  -D DMX_SIZE=128
+  -D DMX_SIZE=512
   -D DEBUG_PORT=514
   -D ST_IP_3=123
-  -D ST_IP_4=255
+  -D ST_IP_4=35
   -D DEBUG_IP=137
-  -D HOST_NAME="\"UDPDMX\""
-  -D DO_STRESSTEST=0
-  -D DIMMER_START_LEVEL=1
+  -D DIMMER_START_LEVEL=2
+
+
 
 [env:d1_mini]
 platform = espressif8266
@@ -150,37 +138,6 @@ build_flags =
   -D ST_IP_4=176
   -D DEBUG_IP=137
   -D DIMMER_START_LEVEL=2
-
-
-[env:H801]
-platform = espressif8266
-board = esp01_1m
-#board = d1_mini
-framework = arduino
-upload_speed = 921600
-monitor_speed = 115200
-lib_deps = ESPDMX, WifiManager
-lib_ignore = DMXSerial, DmxSimple, Ethernet-PaulStoffregen, UIPEthernet
-build_flags =
-  -D USE_DMXSimple=0
-  -D USE_DMXSerial=0
-  -D USE_H801=1
-  -D USE_ESPDMX=0
-  -D USE_EEPROM_MAC=0
-  -D USE_W5100=0
-  -D USE_ESPWIFI=1
-  -D USE_WIFIMANAER=1
-  -D USE_OTAUPDATE=1
-  -D DEBUG_SERIAL0=0
-  -D DEBUG_UDP=0
-  -D DEBUG_SYSLOG=0
-  -D USE_SIMULATOR=0
-  -D DMX_SIZE=5
-  -D DEBUG_PORT=514
-  -D ST_IP_3=123
-  -D ST_IP_4=176
-  -D DEBUG_IP=137
-  -D DIMMER_START_LEVEL=1
 
 
 [env:x86]
@@ -213,33 +170,3 @@ build_flags =  -lws2_32 -lwsock32
   -D ST_IP_4=176
   -D DEBUG_IP=137
   -D DIMMER_START_LEVEL=1
-
-[env:enc]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
-monitor_speed = 115200
-lib_deps = DMXSerial, UIPEthernet
-lib_ignore = DMXSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, Ethernet
-build_flags =
-  -D USE_DMXSimple=1
-  -D USE_DMXSerial=0
-  -D USE_ESPDMX=0
-  -D USE_EEPROM_MAC=0
-  -D USE_W5100=0
-  -D USE_ENC28j60=1
-  -D USE_ESPWIFI=0
-  -D USE_WIFIMANAER=0
-  -D USE_OTAUPDATE=0
-  -D DEBUG_SERIAL0=0
-  -D DEBUG_UDP=1
-  -D DEBUG_SYSLOG=0
-  -D USE_SIMULATOR=0
-  -D DMX_SIZE=128
-  -D DEBUG_PORT=514
-  -D ST_IP_3=123
-  -D ST_IP_4=176
-  -D DEBUG_IP=137
-  -D DIMMER_START_LEVEL=2
-  -D QUEUESIZE=64
-
