--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-#env_default = enc
+env_default = leonardo
 
 [env:uno]
 platform = atmelavr
@@ -82,6 +82,34 @@ build_flags =
   -D DEBUG_IP=137
   -D DIMMER_START_LEVEL=2
 
+
+
+[env:qioleonardo]
+platform = P11
+board = leonardo
+framework = arduino
+monitor_speed = 115200
+lib_deps = DMXSerial, Ethernet
+lib_ignore = DmxSerial, ESPDMX, WifiManager, WiFi, Ethernet-PaulStoffregen, UIPEthernet
+build_flags =
+  -D USE_DMXSimple=0
+  -D USE_DMXSerial=1
+  -D USE_ESPDMX=0
+  -D USE_EEPROM_MAC=0
+  -D USE_W5100=1
+  -D USE_ESPWIFI=0
+  -D USE_WIFIMANAER=0
+  -D USE_OTAUPDATE=0
+  -D DEBUG_SERIAL0=0
+  -D DEBUG_UDP=0
+  -D DEBUG_SYSLOG=0
+  -D USE_SIMULATOR=0
+  -D DMX_SIZE=512
+  -D DEBUG_PORT=514
+  -D ST_IP_3=123
+  -D ST_IP_4=35
+  -D DEBUG_IP=137
+  -D DIMMER_START_LEVEL=2
 
 
 
